  Newfoundland changing its name to "Newfoundland and Labrador". For details
  see:

  http://www.canadapost.ca/personal/corporate/about/announcements/newpcode-e.asp

  The "province" profile check will now accept both NF and NL, but NF is now
  deprecated and will be removed in a future release.

UI
--

* Force user to enter name of new page/template/component name to avoid server
  crashes.

Usertags
--------

* [formel] fetches the label for the display type from the metadata if not passed
  with the parameters.

Foundation
----------

* Change Newfoundland from NF to NL in "state" table.


------------------------------------------------------------------------------


Interchange 4.9.9 released 2003-10-31.

Core
----

* Remove long-deprecated %Safe hash. Use $CGI, $Carts, $Items, $Config,
  $Scratch, and $Values instead of $Safe{cgi} etc.

* Fix locking of NFS sessions.

* Make [bounce ...] more reliable with respect to terminating output
  and future parsing.

* Send Content-Size header with downloads.

* Add MD5 password support to UserDB. 
  To activate, use UserDB "md5" option, i.e.:

	UserDB   ui   md5   1

* Make $Tag object be rebuilt every time a new page is done.

* Fix bug in [PREFIX-discount-subtotal] where quantity was greater
  than one. We were overloading the discount_price() routine, which
  was dumb, so a new discount_subtotal() routine takes over.

* Add iso_time and null_time options for updating UserDB time_field:

	UserDB  default  null_time    1
	UserDB  default  iso_time     1

* Add stubs for log_error and errstr routines in the database
  modules.

* Fix for broken getppid() on Linux systems with threads enabled.
  To implement, use

        Variable   MV_GETPPID_BROKEN   1

  in interchange.cfg. It substitutes a syscall(64) for the getppid
  call.

  This should only be necessary on systems with threads enabled,
  which is NOT recommended for IC.

* Allow overriding LENGTH_EXCEPTION_DEFAULT with individual LENGTH_EXCEPTION.